Tidy-up: Use StringBuilder, StandardCharsets, ArrayList/Deque/HashMap, Optional.orElseThrow